tests/NormalTests/paczka2/big_fuzzy/32515076.err
Error in line 19: X40aMyb A886 8,3
Error in line 15: R7HBK8lJQWJ S105 21,6
Error in line 35: DN7j4CIb S105 37,5
Error in line 42: DN7j4CIb A129 217,45
Error in line 37: R7HBK8lJQWJ A129 23,2
Error in line 45: R7HBK8lJQWJ A886 21,6
Error in line 44: X40aMyb A129 55,8
Error in line 46: dLuX8cMRNO S889 53,3
Error in line 41: uNjsUORb A129 55,9
Error in line 47: R7HBK8lJQWJ S889 60,4
Error in line 52: uNjsUORb S889 10,4
Error in line 66: X40aMyb A129 97,67
Error in line 39: DN7j4CIb A129 63,4
Error in line 54: R7HBK8lJQWJ A129 50,3
Error in line 63: 4Kjor9x S889 13,4
Error in line 67: DN7j4CIb S105 57,2
Error in line 75: X40aMyb A129 420,1
Error in line 68: R7HBK8lJQWJ S105 75,4
Error in line 80: DN7j4CIb A886 183,2
Error in line 90: uNjsUORb A129 61,1
Error in line 104: X40aMyb A886 69,5
Error in line 84: R7HBK8lJQWJ A129 186,5
Error in line 107: X40aMyb A129 59,4
Error in line 108: R7HBK8lJQWJ S889 72,3
Error in line 112: X40aMyb S889 59,5
Error in line 123: dLuX8cMRNO S105 65,2
Error in line 110: A129 A886 28,6
Error in line 134: uNjsUORb S105 134,78
Error in line 138: 4Kjor9x S889 37,5
Error in line 144: X40aMyb A129 97,5
Error in line 132: uNjsUORb S105 35,2
Error in line 155: uNjsUORb A129 80,0
Error in line 148: DN7j4CIb S105 76,2
Error in line 159: 4Kjor9x A129 20,7
Error in line 177: DN7j4CIb A886 7,8
Error in line 182: R7HBK8lJQWJ A886 15,8
Error in line 193: X40aMyb A886 25,1
Error in line 196: X40aMyb A129 12,4
Error in line 198: X40aMyb A886 64,3
Error in line 199: X40aMyb A129 21,7
Error in line 164: uNjsUORb A886 90,2
Error in line 213: A129 S105 31,0
Error in line 218: uNjsUORb A129 93,6
Error in line 220: A129 A129 45,8
Error in line 232: ?4	jor9x
Error in line 234: dLuX8cMRNO A886 17,32
Error in line 231: dLuX8cMRNO A129 18,2
Error in line 223: uNjsUORb S889 68,8
